Quick fixes for email text wrapping and iPhone 5 register width

--- a/app/assets/stylesheets/tzukuri/modals.scss
+++ b/app/assets/stylesheets/tzukuri/modals.scss
@@ -188,7 +188,7 @@
     }
 
     #terms {
-        margin-bottom:40px;
+        margin-bottom: 40px;
         font-size: 10pt;
         color: $tzukuri-dark-grey;
     }
@@ -342,6 +342,17 @@
 
         button {
             margin-bottom: 20px;
+        }
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    #beta-register-modal {
+        height: auto;
+
+        h1 {
+            font-size: 14pt !important;
+            padding-top: 60px !important;
         }
     }
 }
